Satt opp expandablelistview via expandableListadapter. Funker fjell! Før start på preferencefragment.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="tema_4">Tema 4 :</string>
     <string name="placeholder_long">Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder</string>
     <string name="temagruppe">Temagruppe:</string>
+    <string name="karaktervisning">Karaktervisning</string>
 </resources>
