Filtrering på navn ok, layouts ferdig-ish. Mulig starter på filtrering på karakter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,6 @@
     <string name="velg_tilsynsdato">Velg tilsynsdato</string>
     <string name="velg_arstall">Velg årstall</string>
     <string name="header">Søk i Tilsynsrapporter</string>
+    <string name="filter_query_hint">Filtrer på navn</string>
 
 </resources>
